# autoconfig

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/common/: mod.rs
src/common/fvm/: mod.rs
src/common/utils/: downloader.rs  extractor.rs  git.rs  installer.rs  mod.rs
src/common/utils/configure/: common.rs  mod.rs
src/common/utils/configure/windows/: env.rs  mod.rs
src/common/utils/extractor/: mod.rs  tar.rs  zip.rs
src/installer/: mod.rs
src/installer/git/: git.rs  mod.rs
src/installer/utils/: downloader.rs  file_utils.rs  mod.rs
src/installer/utils/configure/: common.rs  mod.rs
src/installer/utils/configure/unix/: env.rs
src/installer/utils/configure/windows/: env.rs
src/installer/utils/extractor/: tar.rs  zip.rs
src/installer/utils/file_utils/: binary_utils.rs  mod.rs
src/macos/: mod.rs
src/windows/: mod.rs
src/windows/fvm/: mod.rs
