[package]
name = "autoconfig"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
zip = "0.5"
tar = "0.4"
flate2 = "1.0"
dirs = "3.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.9"